force-app/main/default/objects/ELQA_Marketing_Activity__c/ELQA_Marketing_Activity__c.object-meta.xml
<CustomObject>
    <label>Marketing Activity</label>
    <nameField>
        <label>Marketing Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>