force-app/main/default/objects/ELQA_Marketing_Activity__c/fields/Activity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Activity_Detail__c</fullName>
    <label>Activity Detail</label>
    <type>TextArea</type>
</CustomField>