force-app/main/default/objects/ELQA_Marketing_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Email Opened</fullName>
            </value>
            <value>
                <fullName>Website Visit</fullName>
            </value>
            <value>
                <fullName>Form Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>