force-app/main/default/objects/ELQA_Marketing_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N30000001wa29EAA</relationshipName>
    <type>Lookup</type>
</CustomField>