force-app/main/default/objects/ELQA_Marketing_Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>R00N30000001wa2CEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>